<project name="javaforce" default="jar" basedir=".">
  <description>JavaForce SDK</description>
  <!-- set global properties for this build -->
  <property name="app" value="javaforce"/>
  <property name="src" location="src"/>
  <property name="build" location="classes"/>
  <property name="home" value="."/>
  <property name="version" value="15.3.2"/>
  <property name="noelf" value="true"/>

  <property name="debian.depends" value="openjdk-8-jre, libjsch-java, libjzlib-java, libjcifs-java, libv4l-0"/>
  <property name="fedora.depends" value="java-1.8.0-openjdk, jsch, jzlib, jcifs, libv4l"/>
  <property name="arch.depends" value="jre8-openjdk, java-jsch, v4l-utils"/>  <!-- missing jzlib jcifs -->

  <property environment="env"/>

  <import file="base.xml"/>

  <available property="have_glfw" file="native/glfw/src/window.c"/>
  <target name="glfw" unless="have_glfw" description="download glfw">
    <exec command="git clone https://github.com/glfw/glfw.git native/glfw"/>
  </target>

  <target name="depjars" depends="depnatives,glfw">
  </target>

  <target name="compile" depends="depjars" description="compile the source">
    <!-- Compile the java code from ${src} into ${build} -->
    <mkdir dir="${build}"/>
    <mkdir dir="jars"/>
    <javac srcdir="${src}" destdir="${build}" target="1.8" source="1.8" debug="true" includeantruntime="false">
      <compilerarg value="-Xlint:unchecked"/>
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javac>
  </target>

  <target name="jar" depends="depjars,compile" description="build jar file">
    <!-- Build jar file from class files -->
    <jar destfile="jars/javaforce.jar" includes="**/*.class" basedir="${build}">
      <fileset dir="${src}">
        <include name="**/*.png"/>
        <include name="**/*.html"/>
        <include name="**/*.js"/>
        <include name="**/*.css"/>
      </fileset>
    </jar>
  </target>

  <target name="javadoc" description="generate java documentation">
    <javadoc sourcepath="src" destdir="javadoc">
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javadoc>
  </target>

  <!-- sudo ant install -->
  <target name="install" description="install files">
    <copy file="jars/javaforce.jar" todir="/usr/share/java"/>
    <copy file="jars/bouncycastle.jar" todir="/usr/share/java"/>
    <copy file="jars/filters.jar" todir="/usr/share/java"/>

    <copy file="native/jfnative${bits}.so" todir="/usr/lib"/>

    <copy file="lnxbin/jbus-call" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-call" perm="+x"/>
    <copy file="lnxbin/jbus-client" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-client" perm="+x"/>

    <elf appx="jsudo" cfgdir="cfg/"/>
    <elf appx="jsudo-ask" cfgdir="cfg/"/>
    <elf appx="jopen" cfgdir="cfg/"/>
    <elf appx="jfs" cfgdir="cfg/"/>
    <elf appx="jimgconvert" cfgdir="cfg/"/>
    <elf appx="jfr" cfgdir="cfg/"/>
    <elf appx="pngalpha" cfgdir="cfg/"/>
    <elf appx="jf-update-desktop-database" cfgdir="cfg/"/>
    <elf appx="jsmbget" cfgdir="cfg/"/>
    <elf appx="jservice" cfgdir="cfg/"/>
    <elf appx="jf-monitor-dir" cfgdir="cfg/"/>
    <elf appx="jfshare" cfgdir="cfg/"/>
    <elf appx="jcp" cfgdir="cfg/"/>
    <elf appx="jmv" cfgdir="cfg/"/>
    <elf appx="jrm" cfgdir="cfg/"/>
    <elf appx="jver" cfgdir="cfg/"/>
    <elf appx="jresmgr" cfgdir="cfg/"/>
  </target>

  <macrodef name="utilsmacro">
    <attribute name="app"/>
    <attribute name="bits"/>
    <sequential>
      <copy file="${home}/stubs/win@{bits}c.exe" tofile="@{app}.exe" overwrite="true"/>
      <java classpath="${home}/jars/javaforce.jar" classname="javaforce.utils.WinPE" fork="true">
        <arg value="@{app}.exe"/>
        <arg value="cfg/@{app}.cfg"/>
      </java>
    </sequential>
  </macrodef>

  <target name="utils32" depends="jar" description="build exe for utils 32bit">
    <utilsmacro app="jfr" bits="32"/>
    <utilsmacro app="jfs" bits="32"/>
    <utilsmacro app="jimgconvert" bits="32"/>
    <utilsmacro app="pngalpha" bits="32"/>
    <utilsmacro app="jfshare" bits="32"/>
    <utilsmacro app="WinPE" bits="32"/>
  </target>

  <target name="utils64" depends="jar" description="build exe for utils 64bit">
    <utilsmacro app="jfr" bits="64"/>
    <utilsmacro app="jfs" bits="64"/>
    <utilsmacro app="jimgconvert" bits="64"/>
    <utilsmacro app="pngalpha" bits="64"/>
    <utilsmacro app="jfshare" bits="64"/>
    <utilsmacro app="WinPE" bits="64"/>
  </target>

  <target name="jre-base-desktop" description="build JRE for bundled JRE builds with desktop (swing) support">
    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base,java.desktop --output jre_base_desktop"/>
    <delete>
      <fileset dir="jre_base_desktop/bin" includes="java**.exe"/>
    </delete>
  </target>

  <target name="jre-base" description="build JRE for bundled JRE builds with only base">
    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base --output jre_base"/>
    <delete>
      <fileset dir="jre_base/bin" includes="java**.exe"/>
    </delete>
  </target>

  <target name="clean" description="deletes compiled files">
    <delete>
      <fileset dir="classes" includes="**/*.class"/>
      <fileset dir="jars" includes="javaforce.jar"/>
    </delete>
  </target>
</project>
